ambientimpact_base/stylesheets/global/_layout.scss
// -----------------------------------------------------------------------------
//	Base layout partial
// -----------------------------------------------------------------------------

$layout-gutter:			$general-spacing		!default;

$layout-top-spacing:	$general-spacing * 1.5	!default;
$layout-bottom-spacing:	$general-spacing * 8	!default;

///
/// The maximum width of the site layout container.
///
/// Note that $layout-gutter is added to this on either side. This default value
/// is optimal for a single column layout, but may need to be increased if
/// sidebars or other columns are needed.
///
$layout-max-width:		45em					!default;

html {
	// This ensures that a scrollbar is always visible in browsers that have
	// scrollbars that take up viewport space (as opposed to floating scrollbars,
	// that don't affect layout), so that the layout doesn't shift if/when the
	// scrollbars appear, e.g. on resize.
	overflow-y:	scroll;
}

body {
	@if type-of($layout-bottom-spacing) == 'number' {
		padding-bottom:	$layout-bottom-spacing;
	}

	padding-left:	$layout-gutter;
	padding-right:	$layout-gutter;

	box-sizing:		border-box;
}

.layout-container {
	max-width:		$layout-max-width;
	margin-left:	auto;
	margin-right:	auto;

	@if type-of($layout-top-spacing) == 'number' {
		// This is not applied to the <body>, as the Toolbar uses that to offset
		// the viewport.
		margin-top:		$layout-top-spacing;
	}
}

